[tool.poetry]
name = "6420-pymc"
version = "0.1.0"
description = "A redo of ISYE 6420 code into Python"
authors = ["Aaron Reding <areding@gmail.com>"]
readme = "README.md"
packages = [{ include = "6420_pymc" }]

[tool.poetry.dependencies]
python = "^3.10"
pymc = "^4.4.0"
numpy = "^1.23.5"
arviz = "^0.14.0"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
pandas = "^1.5.2"
scikit-learn = "^1.1.3"
networkx = "^2.8.8"
# dependency for pgmpy on windows
# https://github.com/python-poetry/poetry/issues/4231
torch = [
    { platform = "win32", url = "https://download.pytorch.org/whl/cpu/torch-1.13.0%2Bcpu-cp310-cp310-win_amd64.whl" },
]
pgmpy = "^0.1.20"
rich = { extras = ["jupyter"], version = "^12.6.0" }

[tool.poetry.group.dev.dependencies]
jupyterlab = "^3.5.1"
nb-black = "^1.0.7"
watermark = "^2.3.1"
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
